--- a/Game2209/Game2209.csproj
+++ b/Game2209/Game2209.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Characteristics.cs" />
+    <Compile Include="Constants.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
