--- a/Game2209/Game2209.csproj
+++ b/Game2209/Game2209.csproj
@@ -44,8 +44,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Characteristics.cs" />
-    <Compile Include="Constants.cs" />
-    <Compile Include="Person.cs" />
+    <Compile Include="Game.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Validation.cs" />
